fixed zoomed posters appearing behind other elements

--- a/client/src/components/heroBar.css
+++ b/client/src/components/heroBar.css
@@ -23,7 +23,7 @@
   border-top-style: groove;
   border-bottom-style: groove;
   position: relative;
-  z-index: 9999;
+  /* z-index: 9999; */
 }
 
 .hero-bar-bottom {
